kube/graveyard/ntfy/ntfy.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ntfy
  namespace: ntfy
  labels:
    app.kubernetes.io/name: ntfy
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: ntfy
  replicas: 1
  revisionHistoryLimit: 2
  template:
    metadata:
      labels:
        app.kubernetes.io/name: ntfy
    spec:
      containers:
        - name: ntfy
          image: binwiederhier/ntfy:v2.6.2
          args: ["serve"]
          resources:
            limits:
              memory: "128Mi"
              cpu: "300m"
          ports:
            - name: http
              containerPort: 80
              protocol: TCP
          volumeMounts:
            - mountPath: /etc/ntfy/server.yml
              name: config
              subPath: server.yml
            - mountPath: /data
              name: data-volume
          #livenessProbe:
          #  httpGet:
          #    path: /v1/health
          #    port: 80
          #readinessProbe:
          #  httpGet:
          #    path: /v1/health
          #    port: 80
      volumes:
        - name: config
          configMap:
            name: ntfy-config
        - name: data-volume
          persistentVolumeClaim:
            claimName: ntfy-data
