kube/graveyard/ntfy/network.yml
---
apiVersion: v1
kind: Service
metadata:
  name: ntfy
  namespace: ntfy
  labels:
    app.kubernetes.io/name: ntfy
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: ntfy
  ports:
    - name: http-ntfy
      protocol: TCP
      port: 80
      targetPort: http
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ntfy
  namespace: ntfy
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt"
  labels:
    app.kubernetes.io/name: ntfy
spec:
  ingressClassName: nginx-internal
  tls:
  - hosts:
    - ntfy.matthew-stratton.me
    secretName: ntfy-tls
  rules:
  - host: ntfy.matthew-stratton.me
    http:
      paths:
      - backend:
          service:
            name: ntfy
            port:
              name: http-ntfy
        path: /
        pathType: Prefix
